hphp/test/slow/case_type_missing_class.php.expectf
Fatal error: Unknown type or class E in %s/case_type_missing_class.php on line 6
